# make_ai_robot

./: .gitattributes  .gitignore  ASTAR_SETUP_GUIDE.md  GPT_SETUP_GUIDE.md  README.md  check_grid_status.sh  fix_conda_shebangs.sh  visualize_waypoints.py
docker/: README.md  compose.yaml  compose_build.bash
docker/DockerFiles/: Dockerfile
results/: GRID_SEARCH_INTERMEDIATE.md  RESULTS_SUMMARY.md  fusion_scanstd0.05_beams144_particles1000.txt  fusion_scanstd0.05_beams144_particles2000.txt  fusion_scanstd0.05_beams144_particles500.txt  fusion_scanstd0.15_beams144_particles1000.txt  fusion_scanstd0.15_beams144_particles2000.txt  fusion_scanstd0.15_beams144_particles500.txt  fusion_scanstd0.1_beams144_particles1000.txt  fusion_scanstd0.1_beams144_particles2000.txt  fusion_scanstd0.1_beams144_particles500.txt  fusion_scanstd0.1_beams36_particles1000.txt  fusion_scanstd0.1_beams36_particles2000.txt  fusion_scanstd0.1_beams36_particles500.txt  fusion_scanstd0.1_beams72_particles1000.txt  fusion_scanstd0.1_beams72_particles2000.txt  fusion_scanstd0.1_beams72_particles500.txt  fusion_scanstd0.2_beams144_particles1000.txt  fusion_scanstd0.2_beams144_particles2000.txt  fusion_scanstd0.2_beams144_particles500.txt  imu_only_particles1000.txt  imu_only_particles2000.txt  imu_only_particles500.txt  lidar_only_beams144_particles1000.txt  lidar_only_beams144_particles2000.txt  lidar_only_beams144_particles500.txt  lidar_only_beams36_particles1000.txt  lidar_only_beams36_particles2000.txt  lidar_only_beams36_particles500.txt  lidar_only_beams72_particles1000.txt  lidar_only_beams72_particles2000.txt  lidar_only_beams72_particles500.txt  ros2_estimated_poses.csv  ros2_pf_trajectory.txt  traj1_est_from_bag.txt  traj1_est_from_bag_lidar_fused.txt  traj1_est_from_bag_lidar_only.txt  traj1_est_imu_lidar_beams144_p500.txt  traj_raycast.txt  traj_raycast_36beams.txt  (+40 more)
scripts/: compare_trajectories.py  hyperparameter_scanstd.py  hyperparameter_search.py  hyperparameter_search_fusion.py  hyperparameter_search_imu.py  hyperparameter_search_lidar.py  map_raycast.py  offline_pf_from_bag.py  offline_pf_fusion.py  offline_pf_imu.py  offline_pf_lidar_only.py  simple_ate.py  test_global_localizer.py  test_map_raycast.py
src/go1_simulation/: CMakeLists.txt  package.xml
src/go1_simulation/config/: ros_gz_bridge.yaml
src/go1_simulation/go1_simulation/: go1_gt_pose_publisher.py  move_go1_with_keyboard.py  publish_pointcloud.py  save_map.py
src/go1_simulation/launch/: go1.gazebo.launch.py  visualize_map.launch.py
src/go1_simulation/maps/: empty.pgm  empty.yaml  maze_room.pgm  maze_room.yaml  push_box.pgm  push_box.yaml
src/go1_simulation/rviz/: go1.rviz
src/module_test/: package.xml
src/module_test/launch/: interface_viewer.launch.py
(+45 files in other folders)
