<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>module_test</name>
  <version>0.0.1</version>
  <description>Simple interface viewer that subscribes to detection topics and renders annotated images.</description>
  <maintainer email="user@example.com">module_test maintainer</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- OpenCV: system dependency -->
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

